--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "gemm-quest/third-party/cutlass"]
-	path = gemm-quest/third-party/cutlass
+[submodule "gemm-quest/cutlass"]
+	path = gemm-quest/cutlass
 	url = https://github.com/NVIDIA/cutlass.git
-[submodule "gemm-quest/third-party/pybind11"]
-	path = gemm-quest/third-party/pybind11
-	url = https://github.com/pybind/pybind11.git
-[submodule "gemm-quest/third-party/googletest"]
-	path = gemm-quest/third-party/googletest
-	url = https://github.com/google/googletest.git
